--- a/index.html
+++ b/index.html
@@ -10,24 +10,56 @@
     
     <div class="container">
         <div class="board-row row-1">
-            <div class="cube a8"></div>
-            <div class="cube b8"></div>
-            <div class="cube c8"></div>
-            <div class="cube d8"></div>
-            <div class="cube e8"></div>
-            <div class="cube f8"></div>
-            <div class="cube g8"></div>
-            <div class="cube h8"></div>
+            <div class="cube a8">
+                <img src="/icons/black-rook.png" alt="">
+            </div>
+            <div class="cube b8">
+                <img src="/icons/black-knight.png" alt="">
+            </div>
+            <div class="cube c8">
+                <img src="/icons/black-bishop.png" alt="">
+            </div>
+            <div class="cube d8">
+                <img src="/icons/black-queen.png" alt="">
+            </div>
+            <div class="cube e8">
+                <img src="/icons/black-king.png" alt="">
+            </div>
+            <div class="cube f8">
+                <img src="/icons/black-bishop.png" alt="">
+            </div>
+            <div class="cube g8">
+                <img src="/icons/black-knight.png" alt="">
+            </div>
+            <div class="cube h8">
+                <img src="/icons/black-rook.png" alt="">
+            </div>
         </div>
         <div class="board-row row-2">
-            <div class="cube a7"></div>
-            <div class="cube b7"></div>
-            <div class="cube c7"></div>
-            <div class="cube d7"></div>
-            <div class="cube e7"></div>
-            <div class="cube f7"></div>
-            <div class="cube g7"></div>
-            <div class="cube h7"></div>
+            <div class="cube a7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
+            <div class="cube b7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
+            <div class="cube c7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
+            <div class="cube d7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
+            <div class="cube e7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
+            <div class="cube f7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
+            <div class="cube g7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
+            <div class="cube h7">
+                <img src="/icons/black-pawn.png" alt="">
+            </div>
         </div>
         <div class="board-row row-3">
             <div class="cube a6"></div>
@@ -70,24 +102,56 @@
             <div class="cube h3"></div>
         </div>
         <div class="board-row row-7">
-            <div class="cube a2"></div>
-            <div class="cube b2"></div>
-            <div class="cube c2"></div>
-            <div class="cube d2"></div>
-            <div class="cube e2"></div>
-            <div class="cube f2"></div>
-            <div class="cube g2"></div>
-            <div class="cube h2"></div>
+            <div class="cube a2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
+            <div class="cube b2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
+            <div class="cube c2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
+            <div class="cube d2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
+            <div class="cube e2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
+            <div class="cube f2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
+            <div class="cube g2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
+            <div class="cube h2">
+                <img src="/icons/white-pawn.png" alt="">
+            </div>
         </div>
         <div class="board-row row-8">
-            <div class="cube a1"></div>
-            <div class="cube b1"></div>
-            <div class="cube c1"></div>
-            <div class="cube d1"></div>
-            <div class="cube e1"></div>
-            <div class="cube f1"></div>
-            <div class="cube g1"></div>
-            <div class="cube h1"></div>
+            <div class="cube a1">
+                <img src="/icons/white-rook.png" alt="">
+            </div>
+            <div class="cube b1">
+                <img src="/icons/white-knight.png" alt="">
+            </div>
+            <div class="cube c1">
+                <img src="/icons/white-bishop.png" alt="">
+            </div>
+            <div class="cube d1">
+                <img src="/icons/white-queen.png" alt="">
+            </div>
+            <div class="cube e1">
+                <img src="/icons/white-king.png" alt="">
+            </div>
+            <div class="cube f1">
+                <img src="/icons/white-bishop.png" alt="">
+            </div>
+            <div class="cube g1">
+                <img src="/icons/white-knight.png" alt="">
+            </div>
+            <div class="cube h1">
+                <img src="/icons/white-rook.png" alt="">
+            </div>
         </div>
     </div>
 
