--- a/index.html
+++ b/index.html
@@ -10,146 +10,146 @@
     
     <div class="container">
         <div class="board-row row-1">
-            <div class="cube a8">
+            <div class="box a8" data-box="a8">
                 <img src="/icons/black-rook.png" alt="">
             </div>
-            <div class="cube b8">
+            <div class="box b8" data-box="b8">
                 <img src="/icons/black-knight.png" alt="">
             </div>
-            <div class="cube c8">
+            <div class="box c8" data-box="c8">
                 <img src="/icons/black-bishop.png" alt="">
             </div>
-            <div class="cube d8">
+            <div class="box d8" data-box="d8">
                 <img src="/icons/black-queen.png" alt="">
             </div>
-            <div class="cube e8">
+            <div class="box e8" data-box="e8">
                 <img src="/icons/black-king.png" alt="">
             </div>
-            <div class="cube f8">
+            <div class="box f8" data-box="f8">
                 <img src="/icons/black-bishop.png" alt="">
             </div>
-            <div class="cube g8">
+            <div class="box g8" data-box="g8">
                 <img src="/icons/black-knight.png" alt="">
             </div>
-            <div class="cube h8">
+            <div class="box h8" data-box="h8">
                 <img src="/icons/black-rook.png" alt="">
             </div>
         </div>
         <div class="board-row row-2">
-            <div class="cube a7">
+            <div class="box a7" data-box="a7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
-            <div class="cube b7">
+            <div class="box b7" data-box="b7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
-            <div class="cube c7">
+            <div class="box c7" data-box="c7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
-            <div class="cube d7">
+            <div class="box d7" data-box="d7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
-            <div class="cube e7">
+            <div class="box e7" data-box="e7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
-            <div class="cube f7">
+            <div class="box f7" data-box="f7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
-            <div class="cube g7">
+            <div class="box g7" data-box="g7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
-            <div class="cube h7">
+            <div class="box h7" data-box="h7">
                 <img src="/icons/black-pawn.png" alt="">
             </div>
         </div>
         <div class="board-row row-3">
-            <div class="cube a6"></div>
-            <div class="cube b6"></div>
-            <div class="cube c6"></div>
-            <div class="cube d6"></div>
-            <div class="cube e6"></div>
-            <div class="cube f6"></div>
-            <div class="cube g6"></div>
-            <div class="cube h6"></div>
+            <div class="box a6" data-box="a6"></div>
+            <div class="box b6" data-box="b6"></div>
+            <div class="box c6" data-box="c6"></div>
+            <div class="box d6" data-box="d6"></div>
+            <div class="box e6" data-box="e6"></div>
+            <div class="box f6" data-box="f6"></div>
+            <div class="box g6" data-box="g6"></div>
+            <div class="box h6" data-box="h6"></div>
         </div>
         <div class="board-row row-4">
-            <div class="cube a5"></div>
-            <div class="cube b5"></div>
-            <div class="cube c5"></div>
-            <div class="cube d5"></div>
-            <div class="cube e5"></div>
-            <div class="cube f5"></div>
-            <div class="cube g5"></div>
-            <div class="cube h5"></div>
+            <div class="box a5" data-box="a5"></div>
+            <div class="box b5" data-box="b5"></div>
+            <div class="box c5" data-box="c5"></div>
+            <div class="box d5" data-box="d5"></div>
+            <div class="box e5" data-box="e5"></div>
+            <div class="box f5" data-box="f5"></div>
+            <div class="box g5" data-box="g5"></div>
+            <div class="box h5" data-box="h5"></div>
         </div>
         <div class="board-row row-5">
-            <div class="cube a4"></div>
-            <div class="cube b4"></div>
-            <div class="cube c4"></div>
-            <div class="cube d4"></div>
-            <div class="cube e4"></div>
-            <div class="cube f4"></div>
-            <div class="cube g4"></div>
-            <div class="cube h4"></div>
+            <div class="box a4" data-box="a4"></div>
+            <div class="box b4" data-box="b4"></div>
+            <div class="box c4" data-box="c4"></div>
+            <div class="box d4" data-box="d4"></div>
+            <div class="box e4" data-box="e4"></div>
+            <div class="box f4" data-box="f4"></div>
+            <div class="box g4" data-box="g4"></div>
+            <div class="box h4" data-box="h4"></div>
         </div>
         <div class="board-row row-6">
-            <div class="cube a3"></div>
-            <div class="cube b3"></div>
-            <div class="cube c3"></div>
-            <div class="cube d3"></div>
-            <div class="cube e3"></div>
-            <div class="cube f3"></div>
-            <div class="cube g3"></div>
-            <div class="cube h3"></div>
+            <div class="box a3" data-box="a3"></div>
+            <div class="box b3" data-box="b3"></div>
+            <div class="box c3" data-box="c3"></div>
+            <div class="box d3" data-box="d3"></div>
+            <div class="box e3" data-box="e3"></div>
+            <div class="box f3" data-box="f3"></div>
+            <div class="box g3" data-box="g3"></div>
+            <div class="box h3" data-box="h3"></div>
         </div>
         <div class="board-row row-7">
-            <div class="cube a2">
+            <div class="box a2" data-box="a2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
-            <div class="cube b2">
+            <div class="box b2" data-box="b2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
-            <div class="cube c2">
+            <div class="box c2" data-box="c2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
-            <div class="cube d2">
+            <div class="box d2" data-box="d2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
-            <div class="cube e2">
+            <div class="box e2" data-box="e2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
-            <div class="cube f2">
+            <div class="box f2" data-box="f2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
-            <div class="cube g2">
+            <div class="box g2" data-box="g2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
-            <div class="cube h2">
+            <div class="box h2" data-box="h2">
                 <img src="/icons/white-pawn.png" alt="">
             </div>
         </div>
         <div class="board-row row-8">
-            <div class="cube a1">
+            <div class="box a1" data-box="a1">
                 <img src="/icons/white-rook.png" alt="">
             </div>
-            <div class="cube b1">
+            <div class="box b1" data-box="b1">
                 <img src="/icons/white-knight.png" alt="">
             </div>
-            <div class="cube c1">
+            <div class="box c1" data-box="c1">
                 <img src="/icons/white-bishop.png" alt="">
             </div>
-            <div class="cube d1">
+            <div class="box d1" data-box="d1">
                 <img src="/icons/white-queen.png" alt="">
             </div>
-            <div class="cube e1">
+            <div class="box e1" data-box="e1">
                 <img src="/icons/white-king.png" alt="">
             </div>
-            <div class="cube f1">
+            <div class="box f1" data-box="f1">
                 <img src="/icons/white-bishop.png" alt="">
             </div>
-            <div class="cube g1">
+            <div class="box g1" data-box="g1">
                 <img src="/icons/white-knight.png" alt="">
             </div>
-            <div class="cube h1">
+            <div class="box h1" data-box="h1">
                 <img src="/icons/white-rook.png" alt="">
             </div>
         </div>
